--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-nav-first">
                          <li><a href="#top" class="smoothScroll">HOME</a></li>
-                         <li><a href="#about" class="smoothScroll">ABOUT US</a></li>
+                         <li><a href="about.html" class="smoothScroll">ABOUT US</a></li>
                          <li><a href="team.html" class="smoothScroll">OUR TEAM</a></li>
                          <li><a href="courses.html" class="smoothScroll">COURSES</a></li>
                          
-                         <li><a href="#contact" class="smoothScroll">CONTACT US</a></li>
+                         <li><a href="contact.html" class="smoothScroll">CONTACT US</a></li>
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
@@ -684,8 +684,8 @@
                          <!-- webintern_footer_title -->
                          <h4 class="webintern_footer_title h5"><small>Contact Us</small></h4>
                          <ul class="webintern-footer-list">
-                              <li><a><i class="fa fa-map-marker" aria-hidden="true"></i> 123 Street, New York, USA</a></li>
-                              <li><a><i class="fa fa-phone" aria-hidden="true"></i> +012 345 67890</a></li>
+                              <li><a><i class="fa fa-map-marker" aria-hidden="true"></i> Bus Stand Building, Ramanattukara</a></li>
+                              <li><a><i class="fa fa-phone" aria-hidden="true"></i> 9061099923</a></li>
                               <li><a><i class="fa fa-envelope" aria-hidden="true"></i> info@example.com</a></li>
                          </ul>
                          </div>
