--- a/team.html
+++ b/team.html
@@ -83,11 +83,11 @@
                                  <h3>Abhiraj</h3>
                                  <span>Physics</span>
                             </div>
-                            <ul class="social-icon">
+                            <!-- <ul class="social-icon">
                                  <li><a href="#" class="fa fa-facebook-square" attr="facebook icon"></a></li>
                                  <li><a href="#" class="fa fa-twitter"></a></li>
                                  <li><a href="#" class="fa fa-instagram"></a></li>
-                            </ul>
+                            </ul> -->
                        </div>
                   </div>
 
@@ -100,10 +100,10 @@
                                  <h3>Abhai</h3>
                                  <span>Chemistry</span>
                             </div>
-                            <ul class="social-icon">
+                            <!-- <ul class="social-icon">
                                  <li><a href="#" class="fa fa-google"></a></li>
                                  <li><a href="#" class="fa fa-instagram"></a></li>
-                            </ul>
+                            </ul> -->
                        </div>
                   </div>
 
@@ -116,11 +116,11 @@
                                  <h3>Brijith Lal</h3>
                                  <span>Economics</span>
                             </div>
-                            <ul class="social-icon">
+                            <!-- <ul class="social-icon">
                                  <li><a href="#" class="fa fa-twitter"></a></li>
                                  <li><a href="#" class="fa fa-envelope-o"></a></li>
                                  <li><a href="#" class="fa fa-linkedin"></a></li>
-                            </ul>
+                            </ul> -->
                        </div>
                   </div>
 
@@ -133,11 +133,11 @@
                                  <h3>Nikhil Prasad</h3>
                                  <span>Maths</span>
                             </div>
-                            <ul class="social-icon">
+                            <!-- <ul class="social-icon">
                                  <li><a href="#" class="fa fa-twitter"></a></li>
                                  <li><a href="#" class="fa fa-google"></a></li>
                                  <li><a href="#" class="fa fa-behance"></a></li>
-                            </ul>
+                            </ul> -->
                        </div>
                   </div>
 
@@ -150,11 +150,11 @@
                               <h3>Sameer</h3>
                               <span>Chemistry</span>
                          </div>
-                         <ul class="social-icon">
+                         <!-- <ul class="social-icon">
                               <li><a href="#" class="fa fa-twitter"></a></li>
                               <li><a href="#" class="fa fa-google"></a></li>
                               <li><a href="#" class="fa fa-behance"></a></li>
-                         </ul>
+                         </ul> -->
                     </div>
                </div>
 
@@ -167,11 +167,11 @@
                             <h3>Vineesha</h3>
                             <span>Kerala History</span>
                         </div>
-                        <ul class="social-icon">
+                        <!-- <ul class="social-icon">
                             <li><a href="#" class="fa fa-twitter"></a></li>
                             <li><a href="#" class="fa fa-google"></a></li>
                             <li><a href="#" class="fa fa-behance"></a></li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
 
@@ -184,11 +184,11 @@
                                  <h3>Arun</h3>
                                  <span>Kerala Navaothanam</span>
                             </div>
-                            <ul class="social-icon">
+                            <!-- <ul class="social-icon">
                                  <li><a href="#" class="fa fa-twitter"></a></li>
                                  <li><a href="#" class="fa fa-google"></a></li>
                                  <li><a href="#" class="fa fa-behance"></a></li>
-                            </ul>
+                            </ul> -->
                        </div>
                 </div>
 
@@ -201,11 +201,11 @@
                               <h3>Shivprasad</h3>
                               <span>Chemistry</span>
                          </div>
-                         <ul class="social-icon">
+                         <!-- <ul class="social-icon">
                               <li><a href="#" class="fa fa-twitter"></a></li>
                               <li><a href="#" class="fa fa-google"></a></li>
                               <li><a href="#" class="fa fa-behance"></a></li>
-                         </ul>
+                         </ul> -->
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6">
@@ -217,11 +217,11 @@
                               <h3>Bhushair</h3>
                               <span>English<span>
                          </div>
-                         <ul class="social-icon">
+                         <!-- <ul class="social-icon">
                               <li><a href="#" class="fa fa-twitter"></a></li>
                               <li><a href="#" class="fa fa-google"></a></li>
                               <li><a href="#" class="fa fa-behance"></a></li>
-                         </ul>
+                         </ul> -->
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6">
@@ -233,11 +233,11 @@
                               <h3>Amar</h3>
                               <span>English</span>
                          </div>
-                         <ul class="social-icon">
+                         <!-- <ul class="social-icon">
                               <li><a href="#" class="fa fa-twitter"></a></li>
                               <li><a href="#" class="fa fa-google"></a></li>
                               <li><a href="#" class="fa fa-behance"></a></li>
-                         </ul>
+                         </ul> -->
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6">
@@ -249,11 +249,11 @@
                               <h3>Siraj Nilambur</h3>
                               <span>Maths</span>
                          </div>
-                         <ul class="social-icon">
+                         <!-- <ul class="social-icon">
                               <li><a href="#" class="fa fa-twitter"></a></li>
                               <li><a href="#" class="fa fa-google"></a></li>
                               <li><a href="#" class="fa fa-behance"></a></li>
-                         </ul>
+                         </ul> -->
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6">
@@ -265,11 +265,11 @@
                               <h3>Vinayan</h3>
                               <span>Geography</span>
                          </div>
-                         <ul class="social-icon">
+                         <!-- <ul class="social-icon">
                               <li><a href="#" class="fa fa-twitter"></a></li>
                               <li><a href="#" class="fa fa-google"></a></li>
                               <li><a href="#" class="fa fa-behance"></a></li>
-                         </ul>
+                         </ul> -->
                     </div>
                 </div>
             </div>
