--- a/about.html
+++ b/about.html
@@ -66,46 +66,44 @@
      <h1><center>ABOUT US</center></h1>
           <!-- Service Start -->
           <section id="feature">
-            <div class="container">
-                 <div class="row">
-                      <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
-                           <div class="service-item text-center pt-3">
-                                <div class="p-4">
-                                     <i class="fa fa-3x fa-graduation-cap text-primary mb-4"></i>
-                                     <h5 class="mb-3">Skilled Instructors</h5>
-                                     <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
-                                </div>
-                           </div>
-                      </div>
-                      <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
-                           <div class="service-item text-center pt-3">
-                                <div class="p-4">
-                                     <i class="fa fa-3x fa-globe text-primary mb-4"></i>
-                                     <h5 class="mb-3">Online Classes</h5>
-                                     <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
-                                </div>
-                           </div>
-                      </div>
-                      <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
-                           <div class="service-item text-center pt-3">
-                                <div class="p-4">
-                                     <i class="fa fa-3x fa-home text-primary mb-4"></i>
-                                     <h5 class="mb-3">Home Projects</h5>
-                                     <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
-                                </div>
-                           </div>
-                      </div>
-                      <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
-                           <div class="service-item text-center pt-3">
-                                <div class="p-4">
-                                     <i class="fa fa-3x fa-book-open text-primary mb-4"></i>
-                                     <h5 class="mb-3">Book Library</h5>
-                                     <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
-                                </div>
-                           </div>
-                      </div>
+               <!-- About Start -->
+     <div class="container">
+         <div class="row g-5">
+             <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
+                 <div class="courses-image">
+                     <img  src="Images/bgg1.png" class="img-responsive" alt="">
                  </div>
-            </div>
+             </div>
+             <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
+                 <h1 class="mb-4">Welcome to Genius</h1>
+                 <p class="mb-4">At GENIUS PSC Coaching Centre, we are committed to helping you achieve your dreams of securing government jobs in various departments like LDC, LGS, LP/UP, Civil Police Officer, and more. Our primary goal is to provide intensive training and guidance to individuals aiming for a career in the public sector.</p>
+                 <div class="row gy-2 gx-4 mb-4">
+                     <div class="col-sm-6">
+                         <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i> Expert Faculty</p>
+                     </div>
+                     <div class="col-sm-6">
+                         <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i> Offline Classes</p>
+                     </div>
+                     <div class="col-sm-6">
+                         <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i> Flexible Batches</p>
+                     </div>
+                     <div class="col-sm-6">
+                         <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i> Free Admissions</p>
+                     </div>
+                     <div class="col-sm-6">
+                         <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i> Mathematics Focus</p>
+                     </div>
+                     <div class="col-sm-6">
+                         <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i> Genius Reading Room</p>
+                     </div>
+                 </div>
+                 <a class="btn btn-primary py-3 px-5 mt-2" href="">Read More</a>
+             </div>
+         </div>
+     </div>
+ </div>
+ <!-- About End -->
+            
        </section>
        <!-- Service End -->
   
