--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                                                        </li>
                                                   </ul>
                                              </div> -->
-                                                  <!-- <h1>Distance Learning Education Center</h1>
-                                                  <h3>Our online courses are designed to fit in your industry supporting all-round with latest technologies.</h3> -->
-                                                  <!-- <a href="#feature" class="section-btn btn btn-default smoothScroll">Discover more</a> -->
+                                                  <h1>Genius Coaching Center</h1>
+                                                  <h3>Our online courses are designed to fit in your industry supporting all-round with latest technologies.</h3> 
+                                                  <a href="#feature" class="section-btn btn btn-default smoothScroll">Discover more</a>
                                         </div>
                                    </div>
                               </div>
@@ -113,7 +113,7 @@
                                    <div class="container">
                                         <div class="col-md-6 col-sm-12">
                                              <!-- <h1>Efficient Learning Methods</h1>
-                                             <h3>Nam eget sapien vel nibh euismod vulputate in vel nibh. Quisque eu ex eu urna venenatis sollicitudin ut at libero. Visit <a rel="nofollow" href="https://www.facebook.com/templatemo">templatemo</a> page.</h3> -->
+                                             <h3>Nam eget sapien vel nibh euismod vulputate in vel nibh. Quisque eu ex eu urna venenatis sollicitudin ut at liber</h3> -->
                                              <!-- <a href="#contact" class="section-btn btn btn-default smoothScroll">Let's chat</a> -->
                                         </div>
                                    </div>
@@ -164,8 +164,8 @@
                          <div class="service-item text-center pt-3">
                               <div class="p-4">
                                    <i class="fa fa-3x fa-graduation-cap text-primary mb-4"></i>
-                                   <h5 class="mb-3">Skilled Instructors</h5>
-                                   <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                                   <h5 class="mb-3">EXPERT FACULTY</h5>
+                                   <p>We take pride in having some of the finest educators in Kerala who are dedicated to your success.</p>
                               </div>
                          </div>
                     </div>
@@ -173,17 +173,18 @@
                          <div class="service-item text-center pt-3">
                               <div class="p-4">
                                    <i class="fa fa-3x fa-globe text-primary mb-4"></i>
-                                   <h5 class="mb-3">Online Classes</h5>
-                                   <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                                   <h5 class="mb-3">OFFLINE CLASSES</h5>
+                                   <p>Regular (Monday to Friday 10AM to 3PM)<br>Sunday (10AM to 4:30PM)<br>Evening (Monday, Wednesday, Friday : 6:30PM to 9PM)</p>
                               </div>
                          </div>
                     </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
                          <div class="service-item text-center pt-3">
                               <div class="p-4">
-                                   <i class="fa fa-3x fa-home text-primary mb-4"></i>
-                                   <h5 class="mb-3">Home Projects</h5>
-                                   <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                                   <i class="fa fa-3x fa-whatsapp text-primary mb-4"></i>
+                                   <h5 class="mb-3">STAY UPDATED WITH US</h5>
+                                   <p>Click here to Join Whatsapp</p>
+                                   <a href="https://chat.whatsapp.com/HqA7mhGbAQbG4FdNzrxmTk"><button type="button" class="btn btn-primary">Join Now</button></a>
                               </div>
                          </div>
                     </div>
@@ -191,8 +192,8 @@
                          <div class="service-item text-center pt-3">
                               <div class="p-4">
                                    <i class="fa fa-3x fa-book-open text-primary mb-4"></i>
-                                   <h5 class="mb-3">Book Library</h5>
-                                   <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                                   <h5 class="mb-3">GENIUS READING ROOM</h5>
+                                   <p>Enjoy a conducive learning environment at our centre.</p>
                               </div>
                          </div>
                     </div>
