--- a/contact.html
+++ b/contact.html
@@ -151,11 +151,9 @@
                     
                 </div> -->
                 <div class="row">
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <iframe id="google-map"
-                        src="https://maps.app.goo.gl/DquxyJBjNRUhzWoy5"
-                        frameborder="0" style="min-height: 400px; border:0;" allowfullscreen="" aria-hidden="false"
-                        tabindex="0"></iframe>
+                    <div class="twelve columns" style="margin-top: 10px; text-align: center; height: 250px;" id="google-map">
+                    <iframe title="Map of Genius psc coaching centre .ramanattukara" width="100%" height="250" style="border:0" loading="lazy" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA9Y9cZLZChFBgo4tqLF5Xdpfc_2Og9MiM&amp;center=11.1778099,75.86554&amp;zoom=15&amp;q=11.1778099%2C75.86554">
+                    </iframe>
                     </div>
                 </div>
             </div>
