--- a/test.html
+++ b/test.html
@@ -46,7 +46,7 @@
                <!-- MENU LINKS -->
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-nav-first">
-                         <li><a href="#top" class="smoothScroll">HOME</a></li>
+                         <li><a href="index.html" class="smoothScroll">HOME</a></li>
                          <!-- <li><a href="#about" class="smoothScroll">ABOUT US</a></li>
                          <li><a href="team.html" class="smoothScroll">OUR TEAM</a></li>
                          <li><a href="courses.html" class="smoothScroll">COURSES</a></li>
