--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
      <!-- MENU -->
      <section class="navbar custom-navbar navbar-fixed-top" role="navigation">
           <div class="container">
-
+               
                <div class="navbar-header">
                     <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                          <span class="icon icon-bar"></span>
@@ -178,6 +178,16 @@
                               </div>
                          </div>
                     </div>
+                    
+                    <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
+                         <div class="service-item text-center pt-3">
+                              <div class="p-4">
+                                   <i class="fa fa-3x fa-book text-primary mb-4"></i>
+                                   <h5 class="mb-3">GENIUS READING ROOM</h5>
+                                   <p>Enjoy a conducive learning environment at our centre.</p>
+                              </div>
+                         </div>
+                    </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
                          <div class="service-item text-center pt-3">
                               <div class="p-4">
@@ -185,15 +195,6 @@
                                    <h5 class="mb-3">STAY UPDATED WITH US</h5>
                                    <p>Click here to Join Whatsapp</p>
                                    <a href="https://chat.whatsapp.com/HqA7mhGbAQbG4FdNzrxmTk"><button type="button" class="btn btn-primary">Join Now</button></a>
-                              </div>
-                         </div>
-                    </div>
-                    <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
-                         <div class="service-item text-center pt-3">
-                              <div class="p-4">
-                                   <i class="fa fa-3x fa-book text-primary mb-4"></i>
-                                   <h5 class="mb-3">GENIUS READING ROOM</h5>
-                                   <p>Enjoy a conducive learning environment at our centre.</p>
                               </div>
                          </div>
                     </div>
@@ -307,6 +308,62 @@
           </div>
      </div> -->
 
+     <!-- Our Mission-->
+     <section class="section bg-default section-md">
+          <div class="container">
+            <div class="row row-30">
+              <div class="col-md-6">
+                <h2 class="title-icon"><span class="icon icon-default mercury-icon-target-2"></span><span>Our <span class="text-light">Mission</span></span></h2>
+                <p class="big">Our mission is to provide accounting and tax services of a superior quality. The responsive, personal attention we provide for each client, regardless how large or small, is the key to our approach.</p>
+                <ul class="list-marked-2">
+                  <li>Providing high-quality accounting & tax services</li>
+                  <li>Sharing professional experience in tax management</li>
+                  <li>Offering full support to all our clients</li>
+                </ul><a class="button button-primary" href="#">Read more</a>
+              </div>
+              <div class="col-md-6">
+                <div class="row">
+                  <div class="col-6">
+                    <!--Box counter-->
+                    <div class="box-counter">
+                      <div class="box-counter-main">
+                        <div class="counter">750</div>
+                      </div>
+                      <p class="box-counter-title">Satisfied Clients</p>
+                    </div>
+                  </div>
+                  <div class="col-6">
+                    <!--Box counter-->
+                    <div class="box-counter">
+                      <div class="box-counter-main">
+                        <div class="counter">68</div>
+                      </div>
+                      <p class="box-counter-title">Team Members</p>
+                    </div>
+                  </div>
+                  <div class="col-6">
+                    <!--Box counter-->
+                    <div class="box-counter">
+                      <div class="box-counter-main">
+                        <div class="counter">243</div>
+                      </div>
+                      <p class="box-counter-title">Successful Cases</p>
+                    </div>
+                  </div>
+                  <div class="col-6">
+                    <!--Box counter-->
+                    <div class="box-counter">
+                      <div class="box-counter-main">
+                        <div class="counter">99</div><span>%</span>
+                      </div>
+                      <p class="box-counter-title">Satisfaction Rate</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
 
      <!-- Courses -->
      <section id="courses">
