--- a/about.html
+++ b/about.html
@@ -69,13 +69,13 @@
                <!-- About Start -->
      <div class="container">
          <div class="row g-5">
-             <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
+             <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 360px;">
                  <div class="courses-image">
-                     <img  src="Images/bgg1.png" class="img-responsive" alt="">
+                    <img  src="Images/bgg1.png" class="img-responsive" alt="">
                  </div>
              </div>
              <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
-                 <h1 class="mb-4">Welcome to Genius</h1>
+                 <h1 class="mb-4"><center>WELCOME</center></h1>
                  <p class="mb-4">At GENIUS PSC Coaching Centre, we are committed to helping you achieve your dreams of securing government jobs in various departments like LDC, LGS, LP/UP, Civil Police Officer, and more. Our primary goal is to provide intensive training and guidance to individuals aiming for a career in the public sector.</p>
                  <div class="row gy-2 gx-4 mb-4">
                      <div class="col-sm-6">
