--- a/test.html
+++ b/test.html
@@ -23,6 +23,10 @@
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
      <!-- MAIN CSS -->
      <link rel="stylesheet" href="css/style.css">
+     <link rel="apple-touch-icon" sizes="180x180" href="Images/favicon/apple-touch-icon.png">
+     <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon/favicon-32x32.png">
+     <link rel="icon" type="image/png" sizes="16x16" href="Images/favicon/favicon-16x16.png">
+     <link rel="manifest" href="Images/favicon/site.webmanifest">
 
 </head>
 
