--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                     <!-- lOGO TEXT HERE -->
                     <a href="#" class="navbar-brand"><img src="Images/Logo.png" alt="logo" height="40px" width="40px"></a>
-                    <a href="#" class="navbar-brand"><img src="Images/Genius-Word.png" alt="" height="40px" width="100px"></a>
+                    <a href="#" class="navbar-brand"><img src="Images/Genius.png" alt="" height="40px" width="100px"></a>
                </div>
 
                <!-- MENU LINKS -->
