--- a/test.html
+++ b/test.html
@@ -43,8 +43,8 @@
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <a href="#" class="navbar-brand"><img src="Images/Logo.png" alt="logo" height="40px" width="40px"></a>
-                    <a href="#" class="navbar-brand"><b>GENIUS</b></a>
+                    <a href="index.html" class="navbar-brand"><img src="Images/Logo.png" alt="logo" height="40px" width="40px"></a>
+                    <a href="index.html" class="navbar-brand"><img src="Images/genius.png" alt="" height="40px" width="150px"></a>
                </div>
 
                <!-- MENU LINKS -->
