--- a/contact.html
+++ b/contact.html
@@ -48,8 +48,8 @@
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <a href="#" class="navbar-brand"><img src="Images/Logo.png" alt="logo" height="40px" width="40px"></a>
-                    <a href="#" class="navbar-brand"><b>GENIUS</b></a>
+                    <a href="index.html" class="navbar-brand"><img src="Images/Logo.png" alt="logo" height="40px" width="40px"></a>
+                    <a href="index.html" class="navbar-brand"><img src="Images/genius.png" alt="" height="40px" width="150px"></a>
                </div>
 
                <!-- MENU LINKS -->
@@ -69,6 +69,7 @@
                </div>
           </div>
      </section>
+
 
 
          <!-- Contact Start -->
@@ -169,9 +170,7 @@
                <div class="container">
                     <div class="row">
                          <div class="col-sm-6 col-md-3 ">
-                              <!-- <a class="webintern-footer-logo" href="#">
-                                   <img class="img-responsive" src="Images/Logo.png" style="width:100px;" alt="">
-                              </a> -->
+                              <a class="webintern-footer-logo" href="index.html" class="navbar-brand"><img src="Images/genius-white.png" alt="" height="50px" width="150px"></a>
                               <div class="simple-text dark padding-sm">
                                    
                                    <p><b>GENIUS PSC Coaching Centre </b>- Your Path to Government Job Success!</p>
