--- a/contact.html
+++ b/contact.html
@@ -170,7 +170,7 @@
                <div class="container">
                     <div class="row">
                          <div class="col-sm-6 col-md-3 ">
-                              <a class="webintern-footer-logo" href="index.html" class="navbar-brand"><img src="Images/genius-white.png" alt="" height="50px" width="150px"></a>
+                              <!-- <a class="webintern-footer-logo" href="index.html" class="navbar-brand"><img src="Images/genius-white.png" alt="" height="50px" width="150px"></a> -->
                               <div class="simple-text dark padding-sm">
                                    
                                    <p><b>GENIUS PSC Coaching Centre </b>- Your Path to Government Job Success!</p>
