--- a/team.html
+++ b/team.html
@@ -22,10 +22,24 @@
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
      <!-- MAIN CSS -->
      <link rel="stylesheet" href="css/style.css">
-     <link rel="apple-touch-icon" sizes="180x180" href="Images/favicon/apple-touch-icon.png">
+     <link rel="stylesheet" href="css/style.css">
+     <link rel="apple-touch-icon" sizes="57x57" href="Images/favicon/apple-icon-57x57.png">
+     <link rel="apple-touch-icon" sizes="60x60" href="Images/favicon/apple-icon-60x60.png">
+     <link rel="apple-touch-icon" sizes="72x72" href="Images/favicon/apple-icon-72x72.png">
+     <link rel="apple-touch-icon" sizes="76x76" href="Images/favicon/apple-icon-76x76.png">
+     <link rel="apple-touch-icon" sizes="114x114" href="Images/favicon/apple-icon-114x114.png">
+     <link rel="apple-touch-icon" sizes="120x120" href="Images/favicon/apple-icon-120x120.png">
+     <link rel="apple-touch-icon" sizes="144x144" href="Images/favicon/apple-icon-144x144.png">
+     <link rel="apple-touch-icon" sizes="152x152" href="Images/favicon/apple-icon-152x152.png">
+     <link rel="apple-touch-icon" sizes="180x180" href="Images/favicon/apple-icon-180x180.png">
+     <link rel="icon" type="image/png" sizes="192x192"  href="Images/favicon/apple-icon-192x192.png">
      <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon/favicon-32x32.png">
+     <link rel="icon" type="image/png" sizes="96x96" href="Images/favicon/favicon-96x96.png">
      <link rel="icon" type="image/png" sizes="16x16" href="Images/favicon/favicon-16x16.png">
-     <link rel="manifest" href="Images/favicon/site.webmanifest">
+     <link rel="manifest" href="Images/favicon/manifest.json">
+     <meta name="msapplication-TileColor" content="#ffffff">
+     <meta name="msapplication-TileImage" content="Images/favicon/ms-icon-144x144.png">
+     <meta name="theme-color" content="#ffffff">
 </head>
 
 <body id="top" data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
@@ -78,7 +92,7 @@
 
                   <div class="col-md-12 col-sm-12 ">
                        <div class="section-title">
-                            <h2>Teachers <small>Meet Professional Trainers</small></h2>
+                            <h2>FACULTY <small>Meet Professional Trainers</small></h2>
                        </div>
                   </div>
 
@@ -280,6 +294,54 @@
                          </ul> -->
                     </div>
                 </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="team-thumb">
+                         <div class="team-image">
+                              <img src="Images/t1.jpg" class="img-responsive" alt="">
+                         </div>
+                         <div class="team-info">
+                              <h3>Ajmal</h3>
+                              <span>Psychology</span>
+                         </div>
+                         <!-- <ul class="social-icon">
+                              <li><a href="#" class="fa fa-twitter"></a></li>
+                              <li><a href="#" class="fa fa-google"></a></li>
+                              <li><a href="#" class="fa fa-behance"></a></li>
+                         </ul> -->
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="team-thumb">
+                         <div class="team-image">
+                              <img src="Images/t2.jpg" class="img-responsive" alt="">
+                         </div>
+                         <div class="team-info">
+                              <h3>Shine</h3>
+                              <span>Constitution</span>
+                         </div>
+                         <!-- <ul class="social-icon">
+                              <li><a href="#" class="fa fa-twitter"></a></li>
+                              <li><a href="#" class="fa fa-google"></a></li>
+                              <li><a href="#" class="fa fa-behance"></a></li>
+                         </ul> -->
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="team-thumb">
+                         <div class="team-image">
+                              <img src="Images/t3.jpg" class="img-responsive" alt="">
+                         </div>
+                         <div class="team-info">
+                              <h3>Khader</h3>
+                              <span>English</span>
+                         </div>
+                         <!-- <ul class="social-icon">
+                              <li><a href="#" class="fa fa-twitter"></a></li>
+                              <li><a href="#" class="fa fa-google"></a></li>
+                              <li><a href="#" class="fa fa-behance"></a></li>
+                         </ul> -->
+                    </div>
+                </div>
             </div>
         </div>
    </section>
@@ -320,7 +382,7 @@
                     <ul class="webintern-footer-list">
                          <li><a href="https://maps.app.goo.gl/DquxyJBjNRUhzWoy5" target="_blank"><i class="fa fa-map-marker" aria-hidden="true"></i> Bus Stand Building, Ramanattukara</a></li>
                          <li><a href="tel:9061099923"><i class="fa fa-phone" aria-hidden="true"></i> 9061099923</a></li>
-                         <li><a href="mailto: abc@example.com"><i class="fa fa-envelope" aria-hidden="true"></i> info@example.com</a></li>
+                         <li><a href="mailto: geniusramanattukara@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i> geniusramanattukara@gmail.com</a></li>
                     </ul>
                     <!-- TT-SOCIAL -->
                     <!-- <ul class="tt-social">
