--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
      <!-- MAIN CSS -->
      <link rel="stylesheet" href="css/style.css">
-     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-     <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-     <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-     <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-     <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-     <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-     <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-     <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-     <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-     <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-     <link rel="manifest" href="/manifest.json">
+     <link rel="apple-touch-icon" sizes="57x57" href="Images/favicon/apple-icon-57x57.png">
+     <link rel="apple-touch-icon" sizes="60x60" href="Images/favicon/apple-icon-60x60.png">
+     <link rel="apple-touch-icon" sizes="72x72" href="Images/favicon/apple-icon-72x72.png">
+     <link rel="apple-touch-icon" sizes="76x76" href="Images/favicon/apple-icon-76x76.png">
+     <link rel="apple-touch-icon" sizes="114x114" href="Images/favicon/apple-icon-114x114.png">
+     <link rel="apple-touch-icon" sizes="120x120" href="Images/favicon/apple-icon-120x120.png">
+     <link rel="apple-touch-icon" sizes="144x144" href="Images/favicon/apple-icon-144x144.png">
+     <link rel="apple-touch-icon" sizes="152x152" href="Images/favicon/apple-icon-152x152.png">
+     <link rel="apple-touch-icon" sizes="180x180" href="Images/favicon/apple-icon-180x180.png">
+     <link rel="icon" type="image/png" sizes="192x192"  href="Images/favicon/apple-icon-192x192.png">
+     <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon/favicon-32x32.png">
+     <link rel="icon" type="image/png" sizes="96x96" href="Images/favicon/favicon-96x96.png">
+     <link rel="icon" type="image/png" sizes="16x16" href="Images/favicon/favicon-16x16.png">
+     <link rel="manifest" href="Images/favicon/manifest.json">
      <meta name="msapplication-TileColor" content="#ffffff">
-     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+     <meta name="msapplication-TileImage" content="Images/favicon/ms-icon-144x144.png">
      <meta name="theme-color" content="#ffffff">
 </head>
 
@@ -93,7 +93,7 @@
                               <div class="container">
                                    <div class="col-md-7 col-sm-12">
                                         <h1>GENIUS COACHING CENTER</h1>
-                                        <h3>Our offline courses are designed to fit in your industry supporting all-round with latest technologies.</h3> 
+                                        <h3>GENIUS PSC Coaching Centre </b>- Your Path to Government Job Success!</h3> 
                                         <a href="#" class="section-btn btn btn-default smoothScroll">Join Us</a>
                                    </div>
                               </div>
@@ -104,9 +104,9 @@
                          <div class="caption">
                               <div class="container">
                                    <div class="col-md-6 col-sm-12">
-                                        <h1>Start your journey with our practical courses</h1>
-                                        <h3>Our offline courses are built in partnership with technology leaders and are designed to meet industry demands.</h3>
-                                        <!-- <a href="#courses" class="section-btn btn btn-default smoothScroll">Take a course</a> -->
+                                        <h1>Start your journey with our offline courses</h1>
+                                        <h3>At GENIUS PSC Coaching Centre, we are committed to helping you achieve your dreams of securing government jobs in various departments like LDC, LGS, LP/UP, Civil Police Officer, and more. Our primary goal is to provide intensive training and guidance to individuals aiming for a career in the public sector.</h3>
+                                        
                                    </div>
                               </div>
                          </div>
@@ -117,8 +117,7 @@
                               <div class="container">
                                    <div class="col-md-6 col-sm-12">
                                         <h1>Efficient Learning Methods</h1>
-                                        <h3>Nam eget sapien vel nibh euismod vulputate in vel nibh. Quisque eu ex eu urna venenatis sollicitudin ut at liber</h3>
-                                        <!-- <a href="#contact" class="section-btn btn btn-default smoothScroll">Let's chat</a> -->
+                                        <h3>GENIUS PSC Coaching Centre </b>- Your Path to Government Job Success!</h3>
                                    </div>
                               </div>
                          </div>
@@ -506,7 +505,7 @@
                          <ul class="webintern-footer-list">
                               <li><a href="https://maps.app.goo.gl/DquxyJBjNRUhzWoy5" target="_blank"><i class="fa fa-map-marker" aria-hidden="true"></i> Bus Stand Building, Ramanattukara</a></li>
                               <li><a href="tel:9061099923"><i class="fa fa-phone" aria-hidden="true"></i> 9061099923</a></li>
-                              <li><a href="mailto: abc@example.com"><i class="fa fa-envelope" aria-hidden="true"></i> info@example.com</a></li>
+                              <li><a href="mailto: geniusramanattukara@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i>geniusramanattukara@gmail.com</a></li>
                          </ul>
                          <!-- TT-SOCIAL -->
                          <!-- <ul class="tt-social">
