--- a/test.html
+++ b/test.html
@@ -23,10 +23,24 @@
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
      <!-- MAIN CSS -->
      <link rel="stylesheet" href="css/style.css">
-     <link rel="apple-touch-icon" sizes="180x180" href="Images/favicon/apple-touch-icon.png">
+     <link rel="stylesheet" href="css/style.css">
+     <link rel="apple-touch-icon" sizes="57x57" href="Images/favicon/apple-icon-57x57.png">
+     <link rel="apple-touch-icon" sizes="60x60" href="Images/favicon/apple-icon-60x60.png">
+     <link rel="apple-touch-icon" sizes="72x72" href="Images/favicon/apple-icon-72x72.png">
+     <link rel="apple-touch-icon" sizes="76x76" href="Images/favicon/apple-icon-76x76.png">
+     <link rel="apple-touch-icon" sizes="114x114" href="Images/favicon/apple-icon-114x114.png">
+     <link rel="apple-touch-icon" sizes="120x120" href="Images/favicon/apple-icon-120x120.png">
+     <link rel="apple-touch-icon" sizes="144x144" href="Images/favicon/apple-icon-144x144.png">
+     <link rel="apple-touch-icon" sizes="152x152" href="Images/favicon/apple-icon-152x152.png">
+     <link rel="apple-touch-icon" sizes="180x180" href="Images/favicon/apple-icon-180x180.png">
+     <link rel="icon" type="image/png" sizes="192x192"  href="Images/favicon/apple-icon-192x192.png">
      <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon/favicon-32x32.png">
+     <link rel="icon" type="image/png" sizes="96x96" href="Images/favicon/favicon-96x96.png">
      <link rel="icon" type="image/png" sizes="16x16" href="Images/favicon/favicon-16x16.png">
-     <link rel="manifest" href="Images/favicon/site.webmanifest">
+     <link rel="manifest" href="Images/favicon/manifest.json">
+     <meta name="msapplication-TileColor" content="#ffffff">
+     <meta name="msapplication-TileImage" content="Images/favicon/ms-icon-144x144.png">
+     <meta name="theme-color" content="#ffffff">
 
 </head>
 
